fix(01): add name element to checkpoint task in plan 01-04

--- a/.planning/phases/01-rate-limiting-separation/01-04-PLAN.md
+++ b/.planning/phases/01-rate-limiting-separation/01-04-PLAN.md
@@ -173,6 +173,7 @@ terraform -chdir=infrastructure/terraform/modules/container-apps validate
 </task>
 
 <task type="checkpoint:human-verify" gate="blocking">
+  <name>Verify phase 1 rate limiting separation</name>
   <what-built>
 Phase 1 rate limiting separation complete: ingestion proxy deployed, scheduler/worker routed through proxy, customer API cleaned up and ready to scale.
   </what-built>
