--- a/.planning/phases/02-authentication-simplification/02-02-PLAN.md
+++ b/.planning/phases/02-authentication-simplification/02-02-PLAN.md
@@ -10,6 +10,9 @@ files_modified:
   - tests/local/helpers.ts
   - docs/DIAMOND_OPUS.md
   - .env.example
+  - packages/api/README.md
+  - docs/GITHUB_SECRETS_CHECKLIST.md
+  - CLAUDE.md
 autonomous: true
 requirements:
   - AUTH-03
@@ -22,6 +25,9 @@ must_haves:
     - "Local e2e test helpers authenticate via X-API-Key header, not HMAC headers"
     - "DIAMOND_OPUS.md Authentication section documents API key-only auth"
     - ".env.example contains no HMAC_SECRETS entry"
+    - "packages/api/README.md contains no HMAC references"
+    - "GITHUB_SECRETS_CHECKLIST.md contains no HMAC_SECRETS references"
+    - "CLAUDE.md Authentication section documents API key-only auth and has no HMAC_SECRETS in env vars"
   artifacts:
     - path: "packages/api/src/routes/system.ts"
       provides: "system config route with ApiKeyAuth-only security"
@@ -33,6 +39,12 @@ must_haves:
       provides: "Updated authentication documentation"
     - path: ".env.example"
       provides: "Example env without HMAC_SECRETS"
+    - path: "packages/api/README.md"
+      provides: "API README with API key-only authentication documentation"
+    - path: "docs/GITHUB_SECRETS_CHECKLIST.md"
+      provides: "Secrets checklist with no HMAC_SECRETS entries"
+    - path: "CLAUDE.md"
+      provides: "Developer guide with API key-only auth and no HMAC_SECRETS in env vars"
   key_links:
     - from: "tests/local/helpers.ts"
       to: "API_BASE_URL"
@@ -45,10 +57,10 @@ must_haves:
 ---
 
 <objective>
-Remove HMAC references from OpenAPI/Swagger documentation, local e2e test helpers, docs, and environment configuration.
+Remove HMAC references from OpenAPI/Swagger documentation, local e2e test helpers, docs, environment configuration, API README, GitHub secrets checklist, and developer guide (CLAUDE.md).
 
-Purpose: Ensure all documentation, developer tooling, and example configuration reflects the simplified API key-only authentication system.
-Output: Consistent single-auth documentation across swagger, docs, e2e helpers, and .env.example.
+Purpose: Ensure all documentation, developer tooling, and example configuration reflects the simplified API key-only authentication system. Developers following any file in the repo will not attempt HMAC auth and receive unexplained 401s.
+Output: Consistent single-auth documentation across swagger, docs, e2e helpers, .env.example, README, secrets checklist, and CLAUDE.md.
 </objective>
 
 <execution_context>
@@ -64,6 +76,9 @@ Output: Consistent single-auth documentation across swagger, docs, e2e helpers, 
 @tests/local/helpers.ts
 @docs/DIAMOND_OPUS.md
 @.env.example
+@packages/api/README.md
+@docs/GITHUB_SECRETS_CHECKLIST.md
+@CLAUDE.md
 </context>
 
 <tasks>
@@ -181,10 +196,13 @@ Keep unchanged:
 </task>
 
 <task type="auto">
-  <name>Task 3: Update DIAMOND_OPUS.md auth section and remove HMAC_SECRETS from .env.example</name>
+  <name>Task 3: Remove HMAC references from all documentation and configuration files</name>
   <files>
     docs/DIAMOND_OPUS.md
     .env.example
+    packages/api/README.md
+    docs/GITHUB_SECRETS_CHECKLIST.md
+    CLAUDE.md
   </files>
   <action>
 **docs/DIAMOND_OPUS.md — Section 7 (REST API), Authentication subsection:**
@@ -232,25 +250,79 @@ The remaining `# API Configuration` section should just contain:
 # API Configuration
 PORT=3000
 ```
+
+**packages/api/README.md:**
+
+Find the "Authentication" or "Dual authentication" section and update it. Replace any text describing "Dual authentication" as a feature heading or description with "API key authentication". Specifically:
+- Change any heading or bullet like "**Dual authentication**: API Key and HMAC signature support" to "**API key authentication**: SHA256-hashed API keys stored in database"
+- Remove any documentation of HMAC headers (`X-Client-Id`, `X-Timestamp`, `X-Signature`) and HMAC canonical string construction
+- Remove the `HMAC_SECRETS` entry from the Configuration section (env var table or list)
+- The updated Authentication section should describe only: pass `X-API-Key` header, value is validated via SHA256 hash against the `api_keys` table, invalid key returns 401
+
+**docs/GITHUB_SECRETS_CHECKLIST.md:**
+
+Remove all 3 occurrences of `HMAC_SECRETS`:
+1. Remove the `HMAC_SECRETS` row from the secrets table (the row describing the secret name, value format, and where to get it)
+2. Remove `HMAC_SECRETS` from the required secrets list (the checklist of secrets that must be configured before deployment)
+3. Remove the `HMAC_SECRETS` entry from the troubleshooting section (any entry explaining what breaks if this secret is missing or misconfigured)
+
+After removal, verify the surrounding content still reads coherently — no orphaned bullet points or broken table formatting.
+
+**CLAUDE.md:**
+
+1. Find the `## Authentication` section (lines 202-206 approximately). It currently documents HMAC as a valid auth mechanism with this structure:
+   ```
+   Dual auth system (checked in order):
+   1. **API Key Auth**: ...
+   2. **HMAC Auth**: X-Client-Id, X-Timestamp, X-Signature headers
+      - Canonical string: METHOD\nPATH\nTIMESTAMP\nSHA256(BODY)
+      - Timestamp tolerance: 300 seconds (5 minutes)
+      - Secrets stored in HMAC_SECRETS env var as JSON
+   3. Neither valid → 401 Unauthorized
+   ```
+   Replace with:
+   ```
+   API key authentication (single mechanism):
+
+   1. **API Key Auth**: `X-API-Key` header → SHA256 hash against `api_keys` table
+   2. Missing or invalid key → 401 Unauthorized
+   ```
+
+2. Find the `## Core Environment Variables` section. Remove the `HMAC_SECRETS` line (currently documented as `HMAC_SECRETS` — JSON object of client secrets). Keep all other environment variables unchanged.
   </action>
-  <verify>grep -n "HMAC\|hmac\|dual auth\|Dual auth\|HMACAuth" docs/DIAMOND_OPUS.md; grep -n "HMAC_SECRETS" .env.example</verify>
-  <done>DIAMOND_OPUS.md contains no HMAC references. .env.example contains no HMAC_SECRETS line. Authentication section accurately describes API key-only auth.</done>
+  <verify>
+grep -n "HMAC\|hmac\|dual auth\|Dual auth\|HMACAuth" docs/DIAMOND_OPUS.md
+grep -n "HMAC_SECRETS" .env.example
+grep -n "HMAC\|hmac\|Dual auth\|dual auth" packages/api/README.md
+grep -n "HMAC_SECRETS" docs/GITHUB_SECRETS_CHECKLIST.md
+grep -n "HMAC\|hmac\|HMAC_SECRETS" CLAUDE.md
+  </verify>
+  <done>
+- DIAMOND_OPUS.md contains no HMAC references and no HMAC_SECRETS row in env vars table
+- .env.example contains no HMAC_SECRETS line
+- packages/api/README.md contains no HMAC references (no "Dual authentication", no HMAC headers, no HMAC_SECRETS)
+- GITHUB_SECRETS_CHECKLIST.md contains no HMAC_SECRETS references (table row, checklist entry, and troubleshooting entry all removed)
+- CLAUDE.md Authentication section describes API key-only auth; Core Environment Variables section has no HMAC_SECRETS entry
+  </done>
 </task>
 
 </tasks>
 
 <verification>
-Confirm no stray HMAC references remain in the targeted files:
+Confirm no stray HMAC references remain in any targeted file:
 ```bash
 grep -n "HMAC\|hmac" packages/api/src/routes/system.ts packages/api/src/swagger/generator.ts tests/local/helpers.ts .env.example
-```
-Expected: zero matches (system.ts and generator.ts may have "API key" references but no HMAC).
-
-Check DIAMOND_OPUS.md:
-```bash
 grep -n "HMAC\|dual auth\|Dual auth" docs/DIAMOND_OPUS.md
+grep -n "HMAC\|Dual auth\|dual auth" packages/api/README.md
+grep -n "HMAC_SECRETS" docs/GITHUB_SECRETS_CHECKLIST.md
+grep -n "HMAC\|HMAC_SECRETS" CLAUDE.md
 ```
-Expected: zero matches.
+Expected: zero matches across all files.
+
+Also confirm swagger still generates cleanly:
+```bash
+npm run swagger 2>&1 | tail -5
+```
 </verification>
 
 <success_criteria>
@@ -258,8 +330,11 @@ Expected: zero matches.
 - swagger generator description contains no HMAC mention
 - npm run swagger completes without errors
 - tests/local/helpers.ts uses x-api-key header in apiGet/apiPost
-- DIAMOND_OPUS.md authentication section describes API key-only auth
+- DIAMOND_OPUS.md authentication section describes API key-only auth with no HMAC_SECRETS env var row
 - .env.example has no HMAC_SECRETS entry
+- packages/api/README.md has no HMAC references and no "Dual authentication" heading
+- GITHUB_SECRETS_CHECKLIST.md has no HMAC_SECRETS in secrets table, required list, or troubleshooting
+- CLAUDE.md Authentication section describes API key-only auth; Core Environment Variables has no HMAC_SECRETS
 </success_criteria>
 
 <output>
